--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -23,6 +23,6 @@ jobs:
       - run: dotnet tool install --global PowerShell # install the latest version of Powershell Core with the dotnet cli and use it in a job’s successive steps
       - run: pwsh ./listDirs.ps1
       - run: choco install osquery --params='/InstallService'
-      - run: $config | Out-File -FilePath C:\Program Data\osquery\osquery.flags
+      # - run: $config | Out-File -FilePath C:\Program Data\osquery\osquery.flags
       - run: Start-service osqueryd
       - run: Get-Service | Where-Object {$_.name -eq “osqueryd”}
