--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,8 +20,8 @@ jobs:
       # - run:
       #     command: echo 'This is powershell executor'
       #     shell: powershell.exe # use Powershell
-      - run: dotnet tool install --global PowerShell # install the latest version of Powershell Core with the dotnet cli and use it in a job’s successive steps
-      - run: pwsh ./listDirs.ps1
+      # - run: dotnet tool install --global PowerShell # install the latest version of Powershell Core with the dotnet cli and use it in a job’s successive steps
+      # - run: pwsh ./listDirs.ps1
       - run:
           command: choco install osquery --params='/InstallService'
           shell: powershell.exe # use Powershell
