--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -32,7 +32,7 @@ jobs:
           command: conda activate venv-basic-anomaly-detection
           shell: cmd.exe # use Command
       - run:
-          command: py.test
+          command: pytest
           shell: cmd.exe # use Command
       # - run:
       #     command: echo 'This is powershell executor'
