pytest test_nb.py

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -32,7 +32,8 @@ jobs:
           command: conda activate venv-basic-anomaly-detection
           shell: cmd.exe # use Command
       - run:
-          command: python -m pytest test_nb.py
+          # command: python -m pytest test_nb.py
+          command: pytest test_nb.py
           shell: cmd.exe # use Command
       # - run:
       #     command: echo 'This is powershell executor'
