--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,12 +10,11 @@ jobs:
       - restore_cache:
           key: deps9-{{ .Branch }}-{{ checksum "environment.yml" }}
       - run:
-          name: "Update conda"
-          command: conda update -n base -c defaults conda --yes
-      - run:
           name: Install dependencies
           command: conda env create -f environment.yml
-
+      - run:
+          name: "Update conda"
+          command: conda update -n anaconda-docker -c defaults conda --yes
           # command: |
           #   conda env list | grep anaconda-docker >/dev/null
           #   if [[ $? != 0 ]]; then
