--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,14 +12,14 @@ jobs:
       - run:
           name: Install dependencies
           command: conda env create -f environment.yml
-      # - run:
+      - run:
       #     name: "Update conda"
       #     command: conda env update -f environment.yml
-          # command: |
-          #   conda env list | grep anaconda-docker >/dev/null
-          #   if [[ $? != 0 ]]; then
-          #       conda env create -f environment.yml
-          #   fi
+          command: |
+            conda env list | grep anaconda-docker >/dev/null
+            if [[ $? != 0 ]]; then
+                conda env create -f environment.yml
+            fi
       - save_cache:
           key: deps9-{{ .Branch }}-{{ checksum "environment.yml" }}
           paths:
