--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,5 +16,13 @@ jobs:
       - run: choco install osquery --params='/InstallService'
       - run: Start-service osqueryd
       - run: Get-Service | Where-Object {$_.name -eq “osqueryd”}
-      - run: choco install vagrant
-      - run: vagrant version
+      # - run: choco install vagrant #Packages requiring reboot:
+      # - run: vagrant version
+    macos:  # indicate that we are using the macOS executor
+      xcode: 11.3.0 # indicate our selected version of Xcode
+      steps: # a series of commands to run
+          - checkout  # pull down code from your version control system.
+          - run:
+          # run our tests using xcode's cli tool `xcodebuild`
+            name: Run Unit Tests
+            command: xcodebuild test -scheme circleci-demo-macos
