--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,7 +1,3 @@
-# Python CircleCI 2.0 configuration file
-#
-# https://circleci.com/docs/2.0/hello-world-windows/#example-configuration-file
-#
 version: 2.1
 
 orbs:
@@ -12,11 +8,23 @@ jobs:
   build-osquery:
     executor:
       name: win/default
-    steps: # multiple shells in the same job
+    steps: 
       - checkout
-      - run: choco install osquery --params='/InstallService'
-      - run: Start-service osqueryd
-      - run: Get-Service | Where-Object {$_.name -eq “osqueryd”}
+      # - run: choco install osquery --params='/InstallService'
+      - run: 
+          name: "Install osquery w choco"
+          shell: powershell.exe # default shell is Powershell
+          command: choco install osquery --params='/InstallService'
+      # - run: Start-service osqueryd
+      - run: 
+          name: "Start osquery service"
+          shell: powershell.exe # default shell is Powershell
+          command: Start-service osqueryd        
+      # - run: Get-Service | Where-Object {$_.name -eq “osqueryd”}
+      - run: 
+          name: "Query osquery service"
+          shell: powershell.exe # default shell is Powershell
+          command: Get-Service | Where-Object {$_.name -eq “osqueryd”}       
 
 workflows:
   commit-parallel-workflow:
