--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,24 +1,25 @@
-# Python CircleCI 2.0 configuration file
-#
-# https://circleci.com/docs/2.0/hello-world-windows/#example-configuration-file
-#
+
 version: 2.1
 
 orbs:
   win: circleci/windows@2.2.0
 
 jobs:
-  build:
-    executor: #https://circleci.com/docs/2.0/hello-world-windows/#section=getting-started
+
+  build-choco-osquery:
+    executor: 
       name: win/default
     steps: # multiple shells in the same job
       - checkout
       - run: choco install osquery --params='/InstallService'
       - run: Start-service osqueryd
       - run: Get-Service | Where-Object {$_.name -eq “osqueryd”}
-      - run:
-      - iwr -useb get.scoop.sh | iex # or shorter #The command "iwr -useb get.scoop.sh | iex" exited with 127.
-      - scoop install vagrant
-      - vagrant version
+      - run: 
+          name: "Start osquery service"
+          shell: powershell.exe # default shell is Powershell
+          command: | 
+            iwr -useb get.scoop.sh | iex # or shorter #The command "iwr -useb get.scoop.sh | iex" exited with 127.
+            scoop install vagrant
+            vagrant version
       # - run: choco install vagrant #Packages requiring reboot:
       # - run: vagrant version
