--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -30,8 +30,7 @@ workflows:
   scheduled-workflow:
     triggers:
       - schedule:        
-          cron: "0,15,30,45 * * * *" # at minutes 0, 15, 30, 45
-          # cron: "0 0 1 * *" # once a month
+          cron: "0 0 1 * *" # once a month
           filters:
             branches:
               only: 
