--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -39,6 +39,12 @@ jobs:
           name: "scoop help "            
           command: "scoop help"
           shell: powershell.exe # default shell is Powershell
+      - run:
+          name: "Install vagrant "            
+          command: | 
+            scoop install vagrant
+            vagrant version 
+          shell: powershell.exe # default shell is Powershell
 
   build-scoop-shorter:
     executor: 
@@ -53,15 +59,16 @@ jobs:
           name: "change the execution policy (i.e. enable Powershell) "            
           command: "Set-ExecutionPolicy RemoteSigned -scope CurrentUser"
           shell: powershell.exe # default shell is Powershell           
-      - run:
-          name: "Install scoop - shorter" 
-          command: "iwr -useb get.scoop.sh | iex"
+      # - run:
+      #     name: "Install scoop - shorter" 
+          # iwr : Win32 internal error "Access is denied" 0x5 occurred while reading the console output buffer. Contact Microsoft 
+          # command: "iwr -useb get.scoop.sh | iex"
           # Make sure PowerShell 5 (or later, include PowerShell Core) and .NET Framework 4.5 (or later) are installed           
-          shell: powershell.exe # default shell is Powershell
-      - run:
-          name: "scoop help "            
-          command: "scoop help"
-          shell: powershell.exe # default shell is Powershell                                    
+          # shell: powershell.exe # default shell is Powershell
+      # - run:
+      #     name: "scoop help "            
+      #     command: "scoop help"
+      #     shell: powershell.exe # default shell is Powershell                                    
       # - run: 
       #     name: "Install scoop"
       #     shell: powershell.exe # default shell is Powershell
