--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -46,7 +46,7 @@ jobs:
           # fallback to using the latest cache if no exact match is found
           - v1-dependencies-
       - run:
-          name: install dependencies
+          name: "create python virtual env"
           command: |
             python3 -m venv venv
             . venv/bin/activate
