--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -47,10 +47,18 @@ jobs:
           # fallback to using the latest cache if no exact match is found
           - v1-dependencies-
       - run:
-          name: "create python virtual env"
+          name: "create python virtual env v1"
           command: |
             python3 -m venv venv
             . venv/bin/activate
+            pip install -r requirements.txt
+      - run:
+          name: "create python virtual env v2"
+          command: |
+            pip3 install virtualenv
+            virtualenv -p $(which python3) ~venvpy3
+            source ~venvpy3/bin/activate
+            pip install -r requirements.txt      
 
 # workflows:
 #   commit-parallel-workflow:
