--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -56,9 +56,9 @@ jobs:
           name: "create python virtual env v2"
           command: |
             pip3 install virtualenv
-            virtualenv -p $(which python3) ~venvpy3
-            source ~venvpy3/bin/activate
-            pip install -r requirements.txt      
+            # virtualenv -p $(which python3) ~venvpy3
+            # source ~venvpy3/bin/activate
+            # pip install -r requirements.txt      
 
 # workflows:
 #   commit-parallel-workflow:
