--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -52,12 +52,13 @@ jobs:
             python3 -m venv venv
             . venv/bin/activate
             pip install -r requirements.txt
+            pip install --upgrade pip
       - run:
           name: "create python virtual env v2"
           command: |
             sudo pip3 install virtualenv
             sudo virtualenv -p $(which python3) ~venvpy3
-            # source ~venvpy3/bin/activate
+            source ~venvpy3/bin/activate
             # pip install -r requirements.txt      
 
 # workflows:
