--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -59,7 +59,17 @@ jobs:
             sudo pip3 install virtualenv
             sudo virtualenv -p $(which python3) ~venvpy3
             source ~venvpy3/bin/activate
-            # pip install -r requirements.txt      
+            pip install -r requirements.txt   
+      - run:
+          name: "build vagrant kvm libvirt"
+          command: |
+            sudo pip3 install virtualenv
+            sudo virtualenv -p $(which python3) ~venvpy3
+            source ~venvpy3/bin/activate
+            pip install -r requirements.txt
+            sudo make deploy-libvirt
+            sudo make deploy-vagrant
+            sudo make deploy-boxes               
 
 # workflows:
 #   commit-parallel-workflow:
