--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -59,7 +59,8 @@ jobs:
             sudo pip3 install virtualenv
             sudo virtualenv -p $(which python3) ~venvpy3
             source ~venvpy3/bin/activate
-            pip install -r requirements.txt   
+            sudo pip install -r requirements.txt   
+            pip install --upgrade pip
       - run:
           name: "build vagrant kvm libvirt"
           command: |
