--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -67,31 +67,34 @@ jobs:
           # fallback to using the latest cache if no exact match is found
           - v1-dependencies-
       - run:
-          name: "create python virtual env v1"
-          command: |
-            python3 -m venv venv
-            . venv/bin/activate
-            pip install -r requirements.txt
-            pip install --upgrade pip
-      - run:
-          name: "create python virtual env v2"
-          command: |
-            sudo pip3 install virtualenv
-            sudo virtualenv -p $(which python3) ~venvpy3
-            source ~venvpy3/bin/activate
-            sudo pip install -r requirements.txt   
-            sudo pip install --upgrade pip
-      - run:
-          name: "build vagrant kvm libvirt"
-          command: |
-            sudo pip3 install virtualenv
-            sudo virtualenv -p $(which python3) ~venvpy3
-            source ~venvpy3/bin/activate
-            sudo pip install -r requirements.txt
-            sudo pip install --upgrade pip
-            sudo make deploy-libvirt
-            # sudo make deploy-vagrant
-            # sudo make deploy-boxes               
+          name: "os fingerprinting"
+          command: hostnamectl status            
+      # - run:
+      #     name: "create python virtual env v1"
+      #     command: |
+      #       python3 -m venv venv
+      #       . venv/bin/activate
+      #       pip install -r requirements.txt
+      #       pip install --upgrade pip
+      # - run:
+      #     name: "create python virtual env v2"
+      #     command: |
+      #       sudo pip3 install virtualenv
+      #       sudo virtualenv -p $(which python3) ~venvpy3
+      #       source ~venvpy3/bin/activate
+      #       sudo pip install -r requirements.txt   
+      #       sudo pip install --upgrade pip
+      # - run:
+      #     name: "build vagrant kvm libvirt"
+      #     command: |
+      #       sudo pip3 install virtualenv
+      #       sudo virtualenv -p $(which python3) ~venvpy3
+      #       source ~venvpy3/bin/activate
+      #       sudo pip install -r requirements.txt
+      #       sudo pip install --upgrade pip
+      #       sudo make deploy-libvirt
+      #       # sudo make deploy-vagrant
+      #       # sudo make deploy-boxes               
 
 # workflows:
 #   commit-parallel-workflow:
