--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -101,6 +101,8 @@ jobs:
           name: "build vagrant kvm libvirt"
           command: |
             sudo make deploy-libvirt
+          environment:
+            TERM: xterm-256color
             # sudo make deploy-vagrant
             # sudo make deploy-boxes  
 
