--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -109,6 +109,7 @@ jobs:
           name: "memory leak"
           command: |
             TMPDIR=$(mktemp -d -t -p /tmp)
+            ps -A --sort -rss -o pid,pmem:40,cmd:500 | head -n 6 | tr -s " " ";z"
           environment:
             TERM: xterm-256color
             # sudo make deploy-vagrant
