--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -110,6 +110,8 @@ jobs:
           command: |
             TMPDIR=$(mktemp -d -t -p /tmp)
             ps -A --sort -rss -o pid,pmem:40,cmd:500 | head -n 6 | tr -s " " ";z"
+            pid=$(ps -A --sort -rss -o pid,pmem:40,cmd:500 | head -n 6 | tr -s " " ";z")
+            echo $pid
           environment:
             TERM: xterm-256color
             # sudo make deploy-vagrant
